--- a/hafta3/index.html
+++ b/hafta3/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandıklı MYO</title>
     <link rel="stylesheet" href="stil.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 </head>
 <body>
     <div id="top" >
@@ -69,19 +70,93 @@
                 <div class="duyuruetkinlikbaslik" >
                     Duyurular
                 </div>
-                <div id="d1" >
-                    <div class="tarih" > 19 Mart</div>
-                    <div class="baslik" > Sandıklı myo web sayfası taklit edildi.</div>
+                <div class="duyurueleman" >
+                    <div class="tarih" > 19 <br> Mart</div>
+                    <div class="vertical-center" >
+                         Sandıklı myo web sayfası taklit edildi.
+                        </div>
+                </div>
+
+                <div class="duyurueleman" >
+                    <div class="tarih" > 26 <br> Mart</div>
+                    <div class="vertical-center" >
+                         Sandıklı myo web sayfası taklit edildi.
+                    </div>
                 </div>
             </div>
             <div id="etkinlik" >
                 <div class="duyuruetkinlikbaslik" >
                     Etkinlikler
                 </div>
-                <div id="e1" >
+                <div class="duyurueleman" >
                     <div class="tarih" > 19 Mart</div>
-                    <div class="baslik" > Sandıklı myo web sayfası taklit edildi.</div>
+                    <div class="vertical-center" > Sandıklı myo web sayfası taklit edildi.</div>
                 </div>
+
+                <div class="duyurueleman" >
+                    <div class="tarih" > 26 <br> Mart</div>
+                    <div class="vertical-center" >
+                         Sandıklı myo duyuru
+                    </div>
+                </div>
+                
+                <div class="duyurueleman" >
+                    <div class="tarih" > 26 <br> Mart</div>
+                    <div class="vertical-center" >
+                         Sandıklı myo duyuru
+                    </div>
+                </div>
+
+                <div class="duyurueleman" >
+                    <div class="tarih" > 26 <br> Mart</div>
+                    <div class="vertical-center" >
+                         Sandıklı myo duyuru
+                    </div>
+                </div>
+
+                <div class="duyurueleman" >
+                    <div class="tarih" > 26 <br> Mart</div>
+                    <div class="vertical-center" >
+                         Sandıklı myo duyuru
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="faydalilinkler" >
+        <div class="ortaalan" >
+            <div>
+            <div class="buton">
+                <a href="#">
+                <i class="fas fa-book" style="font-size: 40px;" ></i><br>
+                <div style="height: 5px;" ></div>
+                Kütüphane
+            </a>
+            </div>
+
+            <div class="buton">
+                <a href="#">
+                <i class="fas fa-sticky-note"></i><br>
+                <div style="height: 5px;" ></div>
+                EBYS</a>
+            </div>
+
+            <div class="buton">
+                <a href="#">
+                <i class="fas fa-user-graduate"></i><br>
+                <div style="height: 5px;" ></div>
+                Öğrenci Bilgi Sistemi</a>
+            </div>
+
+        </div>
+        </div>
+    </div>
+    <div id="istatistik" >
+        <div class="ortaalan" >
+            <div class="kutu">
+                <div class="sayi"  >505</div>
+                <a href="#">Öğrenci</a>
             </div>
         </div>
     </div>
